name: SPoG
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: PublicDomain
license-file: "LICENSE"
maintainer: jfeingold@gmail.com
stability: Experimental
synopsis: Demo of postgresql-simple
description: Demo of postgresql-simple
category: DB
author: J Feingold
data-dir: ""
 
executable spog
    build-depends: base >=4 && <5, 
                   bytestring >=0.9.1 && <0.11,
                   MonadCatchIO-transformers >=0.2.1 && <0.4, 
                   mtl >=2 && <3,
                   containers >= 0.5.0.0,
                   postgresql-simple >= 0.4.2.1
     
    if impl(ghc >=6.12.0)
        buildable: True
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-unused-do-bind -fno-warn-orphans
    else
        buildable: True
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: 
 
